# CoreWar

./: .gitignore  1  CMakeLists.txt  Makefile  README.md  asm  author
assembler/: Makefile
assembler/includes/: asm.h  op.h
assembler/srcs/: argument_check.c  assembler.c  backup.c  calc.c  cw_strsplit.c  error.c  ft_atoi_base.c  global_free.c  lable_distanse.c  main.c  op.c  operation_to_bytecode.c  parseng.c  parser_tools.c  parser_tools2.c  tokens.c
libft/: Makefile
libft/includes/: ft_printf.h  libft.h
libft/srcs/ft_lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_ptr.c  ft_lstpush.c
libft/srcs/ft_mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_uniswap.c
libft/srcs/ft_printf/: flagidiux.c  float.c  floatlong.c  floatob.c  ft_char.c  ft_printstr.c  ft_printx.c  over.c  parseng.c  printf.c  printnbr_logik.c  printtnbr.c  spec.c  unicod.c  unicod_str.c
libft/srcs/ft_str/: ft_atoi.c  ft_close_file.c  ft_freesplit.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrc.c  ft_range.c  ft_read_file.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  (+18 more)
src/: assembler.c  eror.c  error.c  op.c
src/include/: op.h
srcs/assembler/: assembler.c  error.c  op.c
virtual_machine/: Makefile  main.c
virtual_machine/general/: cursor.c  free.c  ft_refactor.c  initialization.c  player.c
virtual_machine/includes/: op.h  vm.h
virtual_machine/input/: input.c  parse_arguments.c  parse_cor_file.c  parse_flags.c
virtual_machine/output/: output.c  show_fight_field.c
virtual_machine/run/: apply_operation.c  check.c  gets.c  helpers_for_run.c  run.c
virtual_machine/run/op/: op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c
virtual_machine/visual_machine/: init.c  the.c
vm_champs/: Car.s  Gagnant.s  Survivor.s  bee_gees.cor  bee_gees.s  jumper.s  maxidef.s  slider2.s  tdc2.s
vm_champs/examples/: Survivoro.cor  Survivoro.s  bee_gees.s  turtle.s  zork.s
