cmake_minimum_required(VERSION 3.14)
project(CoreWar C)

set(CMAKE_C_STANDARD 11)

include_directories(assembler/includes)
include_directories(libft/includes)

add_executable(CoreWar
		assembler/includes/op.h
		assembler/srcs/assembler.c
		assembler/srcs/error.c
		libft/includes/ft_printf.h
		libft/includes/libft.h
		libft/srcs/ft_lst/ft_lstadd.c
		libft/srcs/ft_lst/ft_lstdel.c
		libft/srcs/ft_lst/ft_lstdelone.c
		libft/srcs/ft_lst/ft_lstiter.c
		libft/srcs/ft_lst/ft_lstlen.c
		libft/srcs/ft_lst/ft_lstmap.c
		libft/srcs/ft_lst/ft_lstnew.c
		libft/srcs/ft_lst/ft_lstnew_ptr.c
		libft/srcs/ft_lst/ft_lstpush.c
		libft/srcs/ft_mem/ft_bzero.c
		libft/srcs/ft_mem/ft_memalloc.c
		libft/srcs/ft_mem/ft_memccpy.c
		libft/srcs/ft_mem/ft_memchr.c
		libft/srcs/ft_mem/ft_memcmp.c
		libft/srcs/ft_mem/ft_memcpy.c
		libft/srcs/ft_mem/ft_memdel.c
		libft/srcs/ft_mem/ft_memmove.c
		libft/srcs/ft_mem/ft_memset.c
		libft/srcs/ft_mem/ft_uniswap.c
		libft/srcs/ft_printf/flagidiux.c
		libft/srcs/ft_printf/float.c
		libft/srcs/ft_printf/floatlong.c
		libft/srcs/ft_printf/floatob.c
		libft/srcs/ft_printf/ft_char.c
		libft/srcs/ft_printf/ft_printstr.c
		libft/srcs/ft_printf/ft_printx.c
		libft/srcs/ft_printf/over.c
		libft/srcs/ft_printf/parseng.c
		libft/srcs/ft_printf/printf.c
		libft/srcs/ft_printf/printnbr_logik.c
		libft/srcs/ft_printf/printtnbr.c
		libft/srcs/ft_printf/spec.c
		libft/srcs/ft_printf/unicod.c
		libft/srcs/ft_printf/unicod_str.c
		libft/srcs/ft_str/ft_atoi.c
		libft/srcs/ft_str/ft_close_file.c
		libft/srcs/ft_str/ft_freesplit.c
		libft/srcs/ft_str/ft_intlen.c
		libft/srcs/ft_str/ft_isalnum.c
		libft/srcs/ft_str/ft_isalpha.c
		libft/srcs/ft_str/ft_isascii.c
		libft/srcs/ft_str/ft_isdigit.c
		libft/srcs/ft_str/ft_isprint.c
		libft/srcs/ft_str/ft_itoa.c
		libft/srcs/ft_str/ft_itoa_base.c
		libft/srcs/ft_str/ft_power.c
		libft/srcs/ft_str/ft_putchar.c
		libft/srcs/ft_str/ft_putchar_fd.c
		libft/srcs/ft_str/ft_putendl.c
		libft/srcs/ft_str/ft_putendl_fd.c
		libft/srcs/ft_str/ft_putnbr.c
		libft/srcs/ft_str/ft_putnbr_fd.c
		libft/srcs/ft_str/ft_putstr.c
		libft/srcs/ft_str/ft_putstr_fd.c
		libft/srcs/ft_str/ft_putstrc.c
		libft/srcs/ft_str/ft_range.c
		libft/srcs/ft_str/ft_read_file.c
		libft/srcs/ft_str/ft_sqrt.c
		libft/srcs/ft_str/ft_strcat.c
		libft/srcs/ft_str/ft_strchr.c
		libft/srcs/ft_str/ft_strclr.c
		libft/srcs/ft_str/ft_strcmp.c
		libft/srcs/ft_str/ft_strcpy.c
		libft/srcs/ft_str/ft_strdel.c
		libft/srcs/ft_str/ft_strdup.c
		libft/srcs/ft_str/ft_strequ.c
		libft/srcs/ft_str/ft_striter.c
		libft/srcs/ft_str/ft_striteri.c
		libft/srcs/ft_str/ft_strjoin.c
		libft/srcs/ft_str/ft_strjoin_free.c
		libft/srcs/ft_str/ft_strlcat.c
		libft/srcs/ft_str/ft_strlen.c
		libft/srcs/ft_str/ft_strmap.c
		libft/srcs/ft_str/ft_strmapi.c
		libft/srcs/ft_str/ft_strncat.c
		libft/srcs/ft_str/ft_strncmp.c
		libft/srcs/ft_str/ft_strncpy.c
		libft/srcs/ft_str/ft_strnequ.c
		libft/srcs/ft_str/ft_strnew.c
		libft/srcs/ft_str/ft_strnstr.c
		libft/srcs/ft_str/ft_strpbrk.c
		libft/srcs/ft_str/ft_strrchr.c
		libft/srcs/ft_str/ft_strsplit.c
		libft/srcs/ft_str/ft_strstr.c
		libft/srcs/ft_str/ft_strsub.c
		libft/srcs/ft_str/ft_strtoupper.c
		libft/srcs/ft_str/ft_strtrim.c
		libft/srcs/ft_str/ft_swap.c
		libft/srcs/ft_str/ft_tolower.c
		libft/srcs/ft_str/ft_toupper.c
		libft/srcs/ft_str/ft_uitoa_base.c
		libft/srcs/ft_str/get_next_line.c)
